--- a/styles/style.css
+++ b/styles/style.css
@@ -20,95 +20,9 @@ body {
     font-family: 'Integral CF Bold';
 }
 
-.first-order {
+.main {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 38px;
-    width: 100%;
-    background-color: #000000;
-    color: white;
-    font-family: 'Satoshi Variable';
-    font-size: 14px;
-}
-
-.first-order a {
-    color: white;
-}
-
-.first-order button {
-    position: absolute;
-    right: 100px;
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-nav {
-    margin: 25px auto 25px auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1240px;
-}
-
-nav a {
-    text-decoration: none;
-    color: black;
-}
-
-.logo {
-    font-size: 32px;
-}
-
-.menu {
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Satoshi Variable';
-    width: 321px;
-}
-
-.search-bar {
-    position: relative;
-    width: 550px;
-}
-
-.search-bar input {
-    width: 100%;
-    height: 40px;
-    border-radius: 62px;
-    border: none;
-    background-color: #F0F0F0;
-    padding: 12px 16px 12px 40px;
-    outline: none;
-}
-
-.search-bar button {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.cart-profile {
-    display: flex;
-    justify-content: space-between;
-    width: 62px;
-}
-
-.cart-profile button {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.cover-photo {
-    position: relative;
-    background-image: url("images/cover-photo.png");
+    background-image: url("../images/cover-photo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -135,11 +49,13 @@ nav a {
 
 .titles h1 {
     font-size: 64px;
+    line-height: 64px;
 }
 
 .info p {
     font-size: 16px;
     font-family: 'Satoshi Variable';
+    line-height: 22px;
 }
 
 .shop-now {
@@ -205,7 +121,7 @@ nav a {
 
 .item {
     position: absolute;
-    top: 50%; 
+    top: 50%;
     transform: translateY(-50%);
     left: max(calc(200px * 5), 100%);
     animation-name: scrollLeft;
@@ -234,8 +150,22 @@ nav a {
     animation-delay: calc(30s / 5 * (5 - 5) * -1);
 }
 
+.new-arrivals,
+.top-selling {
+    margin-top: 80px;
+    text-align: center;
+}
 
-footer {
-    width: 100%;
-    border: 1px solid black;
+.new-arrivals h1,
+.top-selling h1 {
+    font-size: 48px;
+    line-height: 100%;
+}
+
+.divider2 {
+    width: 1124px;
+    height: 1px;
+    background-color: black;
+    opacity: 10%;
+    margin: auto;
 }
