--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -103,6 +103,11 @@ footer {
     z-index: 2;
 }
 
+.subscribe h1 {
+    font-size: 40px;
+    line-height: 45px;
+}
+
 .subscribe-email {
     display: flex;
     flex-direction: column;
@@ -118,7 +123,7 @@ footer {
 }
 
 .subscribe-email input {
-    background-image: url('images/email.png');
+    background-image: url('../images/email.png');
     background-repeat: no-repeat;
     background-position: 10px center;
     padding-left: 40px;
@@ -242,4 +247,179 @@ footer {
 .pay button {
     border: none;
     cursor: pointer;
+}
+
+.burger {
+    flex-direction: column;
+    gap: 4px;
+    cursor: pointer;
+}
+
+.burger span {
+    border-radius: 20px;
+    width: 20px;
+    height: 3px;
+    background-color: black;
+}
+
+.drop-down-menu,
+.search-logo {
+    display: none;
+}
+
+.mobile-br {
+    display: none;
+}
+
+@media (max-width: 390px) {
+    .first-order button {
+        display: none;
+    }
+
+    .first-order {
+        font-size: 12px;
+    }
+
+    nav {
+        margin: 10px auto 10px auto;
+        width: 100%;
+        justify-content: flex-start;
+    }
+
+    nav .menu {
+        display: none;
+    }
+
+    nav .drop-down-menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 90px;
+        z-index: 5;
+        background-color: white;
+        padding: 20px;
+        gap: 32px;
+        font-family: 'Poppins';
+        cursor: pointer;
+    }
+
+    .sign-up-now-button {
+        background-color: #000000;
+        color: white;
+        border-radius: 10px;
+        padding: 14px 32px 14px 32px;
+        gap: 10px;
+        border: none;
+        margin: 20px 0px 70px 0px;
+    }
+
+    .drop-down-menu.active {
+        display: flex;
+    }
+
+    .burger {
+        display: flex;
+        padding-left: 20px;
+        margin-right: 16px;
+    }
+
+    nav .search-bar {
+        display: none;
+    }
+
+    .logo {
+        font-size: 25.2px;
+        margin-right: 96px;
+    }
+
+    .search-logo {
+        display: flex;
+    }
+
+    .cart-profile {
+        width: 110px;
+        padding-right: 20px;
+        justify-content: space-between;
+    }
+
+    .subscribe {
+        margin: 0 auto;
+        display: block;
+        width: 358px;
+        height: 293px;
+        border-radius: 20px;
+        padding: 25px;
+        position: relative;
+    }
+
+    .subscribe h1 {
+        font-size: 32px;
+    }
+
+    .pc-br {
+        display: none;
+    }
+
+    .mobile-br {
+        display: flex;
+    }
+
+    .subscribe-email {
+        margin-top: 15px;
+        gap: 12px;
+    }
+
+    .subscribe-email input,
+    .subscribe-email button {
+        width: 311px;
+        height: 42px;
+    }
+
+    .footer-info {
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 16px;
+        padding-top: 110px;
+    }
+
+    .footer-logo {
+        width: 100%;
+        height: 60px;
+        gap: 20px;
+        margin-bottom: 130px;
+        margin-right: 30px;
+    }
+
+    footer .logo {
+        font-size: 28.85px;
+    }
+
+    footer .slogan {
+        font-size: 14px;
+    }
+
+    .company,
+    .help,
+    .faq,
+    .resources {
+        width: 150px;
+        margin-bottom: 60px;
+    }
+
+    .divider3 {
+        width: 358px;
+    }
+
+    .copy {
+        height: auto;
+    }
+
+    .pay {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        gap: 30px;
+    }
 }
