--- a/styles/product_detail_page.css
+++ b/styles/product_detail_page.css
@@ -225,6 +225,10 @@
     color: white;
 }
 
+.write-review:hover {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
 .all-reviews-filter h4 {
     font-size: 24px;
     line-height: 100%;
@@ -344,6 +348,96 @@
     align-items: center;
     justify-content: center;
     gap: 13px;
+}
+
+.add-review {
+    display: none;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(2px);
+    align-items: center;
+    justify-content: center;
+}
+
+.add-review-content {
+    background-color: white;
+    padding: 30px 25px;
+    border-radius: 12px;
+    position: relative;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Bold.ttf') format('opentype');
+}
+
+.add-review-content h3 {
+    font-size: 12px;
+    font-family: Montserrat;
+}
+
+.add-review input {
+    width: 350px;
+    height: 45px;
+    border-radius: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
+    background-image: url(../images/add-review/add-review-user.png);
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    padding-left: 45px;
+}
+
+.star-rating {
+    margin-bottom: 30px;
+}
+
+.add-review textarea {
+    width: 350px;
+    height: 120px;
+    border-radius: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    margin-bottom: 60px;
+    padding: 10px;
+}
+
+.review-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.submit {
+    width: 150px;
+    height: 45px;
+    border-radius: 8px;
+    padding: 7px 11px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.submit:hover {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.cancel {
+    width: 85px;
+    height: 45px;
+    padding: 7px 11px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+}
+
+.cancel:hover {
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 390px) {
